# cmapss-rul-prediction

./: .gitignore  LICENSE  ML_End2End_Projekt_Rino_Albertin_Predictive_Maintenance.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
cache/fd001/figures/: FD001_labels.pkl  FD001_plot.pkl
cache/fd002/figures/: FD002_labels.pkl  FD002_plot.pkl
cache/fd003/figures/: FD003_labels.pkl  FD003_plot.pkl
cache/fd004/figures/: FD004_labels.pkl  FD004_plot.pkl
data/processed/: FD002_cluster_tsne.csv
models/fd001/: best_grid_model.pkl  best_grid_model_grid.pkl  best_rand_model.pkl  best_rand_model_rand.pkl
src/eda/: __init__.py  eda_clustering.py  eda_life.py  eda_opsetting.py  eda_sensors.py
src/fe/: __init__.py  feature_selection.py  preprocessing.py  temporal_features.py
src/models/: __init__.py  hyperparameter_tuning.py  interpretation.py  models.py  plotting.py
src/util/: __init__.py  cache_util.py  data_loader.py  nb_util.py  normalization.py
src/util/poetry/: poetry_lint.py
